[package]
name = "mirage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.26", features = ["derive"] }
fuser = "0.15.1"
nix = { version = "0.29.0", features = ["signal", "process"] }
notify = "8.0.0"
regex = "1.11.1"
signal-hook = "0.3.17"
sysinfo = "0.33.1"
